Mobile Friendly Slideshow

--- a/mysite/spotifyWrapped/templates/spotifyWrapped/devteam.html
+++ b/mysite/spotifyWrapped/templates/spotifyWrapped/devteam.html
@@ -40,9 +40,9 @@
                 <div class="dev-card">
                     <img src="{% static 'spotifyWrapped/rayan.png' %}" alt="Developer 3" class="dev-image">
                     <h3>Rayan Das</h3>
-                    <p>UI Design</p>
-                    <p>Translate API</p>
+                    <p>Slideshow Functionality</p>
                     <p>Anthropic API</p>
+                    <p>UI Design</p>
                 </div>
                 <div class="dev-card">
                     <img src="{% static 'spotifyWrapped/jaden.png' %}" alt="Developer 4" class="dev-image">
