--- a/mysite/spotifyWrapped/static/spotifyWrapped/home.css
+++ b/mysite/spotifyWrapped/static/spotifyWrapped/home.css
@@ -99,6 +99,7 @@ h1 {
     text-transform: uppercase;
     letter-spacing: 1px;
     text-shadow: 0 6px 15px rgba(0, 0, 0, 0.7);
+    justify-self: center;
 }
 
 /* Cards grid */
