--- a/mysite/spotifyWrapped/static/spotifyWrapped/devteam.css
+++ b/mysite/spotifyWrapped/static/spotifyWrapped/devteam.css
@@ -56,6 +56,7 @@ body {
     text-align: center;
     box-shadow: 0 6px 15px rgba(0, 0, 0, 0.6);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    color: white
 }
 
 .dev-card:hover {
@@ -121,3 +122,26 @@ footer.dev-footer {
     color: #FFF;
     margin-top: 50px;
 }
+
+.header-button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 1rem;
+    color: white;
+    background-color: rgba(29, 185, 84, 0.8);
+    border: none;
+    border-radius: 5px;
+    text-align: center;
+    text-decoration: none;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: all 0.3s ease;
+    margin: 20px;
+}
+
+.header-button:hover {
+    background-color: #1DB954;
+    transform: translateY(-2px);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+}
+
